# YafaRay

./: .gitignore  CMakeLists.txt  index.html  yafray_constants.h
CMakeModules/: FindOpenCL.cmake
include/core_api/: integrator.h  ray.h  scene.h
include/integrators/: photonintegrGPU.h
include/opencl_wrapper/: cl_base.h  cl_buffer.h  cl_context.h  cl_device.h  cl_error.h  cl_event.h  cl_image.h  cl_kernel.h  cl_main.h  cl_mem.h  cl_platform.h  cl_program.h  cl_queue.h  cl_source.h  cl_util.h  cl_wrapper.h
include/utilities/: mcqmc.h
include/yafraycore/: best_candidate.h  ccthreads.h  tiledintegrator.h  triangle.h
src/: CMakeLists.txt
src/gui/: mywindow.cc
src/integrators/: CMakeLists.txt  pathtracer.cc  photonintegrGPU.cc  photonintegrGPU_test.cc
src/opencl_wrapper/: CMakeLists.txt  cl_context.cc  cl_error.cc  cl_kernel.cc  cl_platform.cc  cl_util.cc
src/xml_loader/: xml-loader.cc
src/yafraycore/: ccthreads.cc  environment.cc  integrator.cc  scene.cc  triangle.cc
test/: CMakeLists.txt
test/opencl/: CMakeLists.txt  cl_base.h  cl_buffer.h  cl_context.h  cl_device.h  cl_error.cc  cl_error.h  cl_image.h  cl_kernel.h  cl_mem.h  cl_platform.cc  cl_platform.h  cl_program.h  cl_queue.h  cl_source.h  cl_util.h  cl_wrapper.h  mandelbrot.cc  opencl_test.cc
