add_subdirectory(yafraycore)
add_subdirectory(backgrounds)
add_subdirectory(cameras)
add_subdirectory(image_handlers)
if(WITH_OPENCL)
	add_subdirectory(opencl_wrapper)
endif(WITH_OPENCL)
add_subdirectory(integrators)
add_subdirectory(interface)
add_subdirectory(lights)
add_subdirectory(materials)
add_subdirectory(textures)
add_subdirectory(volumes)
if(WITH_GUI)
	add_subdirectory(gui)
endif(WITH_GUI)
add_subdirectory(xml_loader)